# zaxis.finance-zxs

./: .gitignore  .gitlab-ci.yml  BRIDGES.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  file_header.txt
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: burnin-label-notification.yml  publish-docker-release.yml  publish-draft-release.yml  release-bot.yml  release-candidate.yml
.rpm/: polkadot.spec
bridges/: README.md  deny.toml
bridges/.config/: lingua.dic
bridges/deployments/: README.md
bridges/deployments/local-scripts/: run-rococo-node.sh  run-westend-node.sh  run-wococo-node.sh
bridges/deployments/reverse-proxy/: README.md
bridges/docs/: testing-scenarios.md
bridges/primitives/chain-kusama/: Cargo.toml
bridges/primitives/chain-polkadot/: Cargo.toml
bridges/primitives/chain-rococo/: Cargo.toml
bridges/primitives/chain-westend/: Cargo.toml
bridges/primitives/chain-wococo/: Cargo.toml
bridges/primitives/polkadot-core/: Cargo.toml
bridges/relays/bin-substrate/: Cargo.toml
bridges/relays/client-polkadot/: Cargo.toml
bridges/relays/client-rococo/: Cargo.toml
bridges/relays/client-wococo/: Cargo.toml
cli/: Cargo.toml  build.rs
cli/browser-demo/: index.html
cli/src/: browser.rs  cli.rs  command.rs  lib.rs
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
doc/: docker.md  shell-completion.md  testing.md
docker/: Dockerfile  build.sh  docker-compose-local.yml  docker-compose.yml
erasure-coding/: Cargo.toml
erasure-coding/fuzzer/: Cargo.toml
erasure-coding/fuzzer/src/: reconstruct.rs  round_trip.rs
erasure-coding/src/: lib.rs
node/client/: Cargo.toml
node/client/src/: lib.rs
node/collation-generation/: Cargo.toml
node/collation-generation/src/: error.rs  lib.rs  tests.rs
node/core/approval-voting/: Cargo.toml
node/core/av-store/: Cargo.toml
node/core/backing/: Cargo.toml
node/core/backing/src/: lib.rs  tests.rs
node/core/bitfield-signing/: Cargo.toml
node/core/candidate-validation/: Cargo.toml
node/core/candidate-validation/src/: lib.rs  tests.rs
node/core/chain-api/: Cargo.toml
node/core/chain-selection/: Cargo.toml
node/core/chain-selection/src/: backend.rs  lib.rs  tests.rs  tree.rs
node/core/chain-selection/src/db_backend/: mod.rs  v1.rs
node/core/dispute-coordinator/: Cargo.toml
node/core/dispute-coordinator/src/: backend.rs  lib.rs  tests.rs
node/core/dispute-coordinator/src/db/: mod.rs  v1.rs
node/core/dispute-participation/: Cargo.toml
node/core/parachains-inherent/: Cargo.toml
node/core/provisioner/: Cargo.toml
node/core/provisioner/src/: lib.rs  tests.rs
node/core/pvf/: Cargo.toml
node/core/runtime-api/: Cargo.toml
node/jaeger/: Cargo.toml
node/jaeger/src/: config.rs  errors.rs  lib.rs  spans.rs
node/malus/: Cargo.toml
node/malus/src/: lib.rs  variant-a.rs
node/metered-channel/src/: bounded.rs  lib.rs  unbounded.rs
node/metrics/: Cargo.toml
node/metrics/src/: lib.rs
node/network/approval-distribution/: Cargo.toml
node/network/approval-distribution/src/: lib.rs  tests.rs
node/network/availability-distribution/: Cargo.toml
node/network/availability-recovery/: Cargo.toml
node/network/availability-recovery/src/: error.rs  lib.rs  tests.rs
node/network/bitfield-distribution/: Cargo.toml
node/network/bitfield-distribution/src/: lib.rs  tests.rs
node/network/bridge/: Cargo.toml
node/network/bridge/src/: lib.rs  multiplexer.rs  network.rs  tests.rs  validator_discovery.rs
node/network/collator-protocol/: Cargo.toml
node/network/collator-protocol/src/: error.rs  lib.rs
node/network/collator-protocol/src/collator_side/: mod.rs  tests.rs
node/network/collator-protocol/src/validator_side/: mod.rs  tests.rs
node/network/dispute-distribution/: Cargo.toml
node/network/dispute-distribution/src/: error.rs  lib.rs  metrics.rs
node/network/dispute-distribution/src/receiver/: error.rs  mod.rs
node/network/dispute-distribution/src/sender/: error.rs  mod.rs  send_task.rs
node/network/dispute-distribution/src/tests/: mock.rs  mod.rs
node/network/gossip-support/: Cargo.toml
node/network/protocol/: Cargo.toml
node/network/statement-distribution/: Cargo.toml
node/overseer/: Cargo.toml
node/primitives/: Cargo.toml
node/service/: Cargo.toml  README.adoc
node/subsystem/: Cargo.toml
node/subsystem-test-helpers/: Cargo.toml
node/subsystem-types/: Cargo.toml
node/subsystem-util/: Cargo.toml
node/subsystem-util/src/: determine_new_blocks.rs  error_handling.rs  lib.rs  rolling_session_window.rs  tests.rs
node/subsystem-util/src/runtime/: error.rs  mod.rs
parachain/: Cargo.toml  README.adoc
parachain/src/: lib.rs  primitives.rs  wasm_api.rs
parachain/test-parachains/: Cargo.toml
primitives/: Cargo.toml  README.adoc
primitives/src/: lib.rs  v0.rs
roadmap/: parachains.md  render.sh
roadmap/implementers-guide/: README.md  book.toml  mermaid.min.js
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/common/: Cargo.toml
runtime/kusama/: Cargo.toml
runtime/parachains/: Cargo.toml
runtime/polkadot/: Cargo.toml  README.adoc  build.rs
runtime/rococo/: Cargo.toml  build.rs
runtime/test-runtime/: Cargo.toml  build.rs
runtime/westend/: Cargo.toml
scripts/: adder-collator.sh  run_all_benches.sh  two-node-local-net.sh
scripts/common/: lib.sh
scripts/docker/: Dockerfile  collator.Dockerfile  release.Dockerfile
scripts/github/: generate_release_text.rb  polkadot_release.erb
scripts/gitlab/: check_extrinsics_ordering.sh  check_runtime.sh  lingua.dic  test_deterministic_wasm.sh  trigger_pipeline.sh
scripts/packaging/: polkadot.service
simnet_tests/: run_tests.sh
simnet_tests/configs/: simple_rococo_testnet.toml
src/: README.adoc  main.rs
statement-table/: Cargo.toml  README.adoc
statement-table/src/: generic.rs  lib.rs
tests/: invalid_order_arguments.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs
utils/staking-miner/: Cargo.toml
xcm/pallet-xcm/: Cargo.toml
xcm/src/: double_encoded.rs  lib.rs
xcm/xcm-builder/: Cargo.toml
xcm/xcm-simulator/: Cargo.toml
(+342 files in other folders)
