[[bin]]
name = "zaxis"
path = "src/main.rs"

[package]
name = "zaxis"
description = "Implementation of a https://zaxis.network node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
readme = "README.md"

[dependencies]
zaxis-cli = { path = "cli", features = [ "kusama-native", "westend-native", "rococo-native" ]  }
color-eyre = { version = "0.5.11", default-features = false }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.19.1"
tempfile = "3.2.0"

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/parachains",
	"runtime/zaxis",
	"runtime/kusama",
	"runtime/rococo",
	"runtime/westend",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/xcm-simulator",
	"xcm/xcm-simulator/example",
	"xcm/pallet-xcm",
	"node/client",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/chain-selection",
	"node/core/dispute-coordinator",
	"node/core/dispute-participation",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/network/dispute-distribution",
	"node/overseer",
	"node/overseer/overseer-gen",
	"node/overseer/overseer-gen/proc-macro",
	"node/overseer/all-subsystems-gen",
	"node/malus",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-types",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metrics",
	"node/metered-channel",
	"node/test/client",
	"node/test/service",
	"node/test/zaxis-simnet/common",
	"node/test/zaxis-simnet/node",
	"node/test/zaxis-simnet/test",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"utils/staking-miner",
]

# We want to be able to build the bridge relayer without pulling it (and all of its
# dependencies into the Z-Axis workspace)
exclude = ["bridges/relays/bin-substrate", "bridges/bin/rialto/runtime", "bridges/bin/millau/runtime"]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Z-Axis runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks= [ "zaxis-cli/runtime-benchmarks" ]
try-runtime = [ "zaxis-cli/try-runtime" ]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "zaxis"
extended-description = "Implementation of a https://zaxis.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/zaxis", "/usr/bin/", "755"],
	["scripts/packaging/zaxis.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/zaxis"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "zaxis"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
zaxis = { path = "/usr/bin/zaxis" }

[package.metadata.rpm.files]
"../scripts/packaging/zaxis.service" = { path = "/usr/lib/systemd/system/zaxis.service", mode = "644" }
