[package]
name = "zaxis-node-subsystem-util"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.15"
futures-timer = "3.0.2"
itertools = "0.10"
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
parking_lot = { version = "0.11.1", optional = true }
pin-project = "1.0.7"
rand = "0.8.3"
thiserror = "1.0.23"
tracing = "0.1.26"
lru = "0.6.5"

zaxis-node-primitives = { path = "../primitives" }
zaxis-node-subsystem = { package = "zaxis-node-subsystem", path = "../subsystem" }
zaxis-node-jaeger = { path = "../jaeger" }
zaxis-node-metrics = { path = "../metrics" }
zaxis-node-network-protocol = { path = "../network/protocol" }
zaxis-primitives = { path = "../../primitives" }
zaxis-overseer = { path = "../overseer" }
metered-channel = { path = "../metered-channel"}

sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
assert_matches = "1.4.0"
async-trait = "0.1.42"
env_logger = "0.8.4"
futures = { version = "0.3.15", features = ["thread-pool"] }
log = "0.4.13"
parking_lot = "0.11.1"
zaxis-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
