[package]
name = "zaxis-node-core-backing"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
zaxis-primitives = { path = "../../../primitives" }
zaxis-node-primitives = { path = "../../primitives" }
zaxis-subsystem = { package = "zaxis-node-subsystem", path = "../../subsystem" }
zaxis-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "zaxis-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "zaxis-statement-table", path = "../../../statement-table" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tracing = "0.1.26"
thiserror = "1.0.23"

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.15", features = ["thread-pool"] }
assert_matches = "1.4.0"
zaxis-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
