[package]
name = "zaxis-node-core-candidate-validation"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.15"
tracing = "0.1.26"

sp-maybe-compressed-blob = { package = "sp-maybe-compressed-blob", git = "https://github.com/paritytech/substrate", branch = "master" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }

zaxis-primitives = { path = "../../../primitives" }
zaxis-parachain = { path = "../../../parachain" }
zaxis-node-primitives = { path = "../../primitives" }
zaxis-node-subsystem = { package = "zaxis-node-subsystem", path = "../../subsystem" }
zaxis-node-subsystem-util = { path = "../../subsystem-util" }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
zaxis-node-core-pvf = { path = "../pvf" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.15", features = ["thread-pool"] }
assert_matches = "1.4.0"
zaxis-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
