[package]
name = "zaxis-node-core-chain-selection"
description = "Chain Selection Subsystem"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
futures-timer = "3"
tracing = "0.1.26"
zaxis-primitives = { path = "../../../primitives" }
zaxis-node-primitives = { path = "../../primitives" }
zaxis-node-subsystem = { path = "../../subsystem" }
zaxis-node-subsystem-util = { path = "../../subsystem-util" }
kvdb = "0.10.0"
thiserror = "1.0.23"
parity-scale-codec = "2"

[dev-dependencies]
zaxis-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
parking_lot = "0.11"
assert_matches = "1"
kvdb-memorydb = "0.10.0"
