[package]
name = "zaxis-node-core-provisioner"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
futures = "0.3.15"
tracing = "0.1.26"
thiserror = "1.0.23"
zaxis-primitives = { path = "../../../primitives" }
zaxis-node-subsystem = { path = "../../subsystem" }
zaxis-node-subsystem-util = { path = "../../subsystem-util" }
futures-timer = "3.0.2"

[dev-dependencies]
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
zaxis-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
