[package]
name = "zaxis-approval-distribution"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
zaxis-node-primitives = { path = "../../primitives" }
zaxis-node-network-protocol = { path = "../protocol" }
zaxis-node-subsystem = { path = "../../subsystem" }
zaxis-node-subsystem-util = { path = "../../subsystem-util" }
zaxis-primitives = { path = "../../../primitives" }

futures = "0.3.15"
tracing = "0.1.26"

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["std"] }

zaxis-node-subsystem-util = { path = "../../subsystem-util" }
zaxis-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }

assert_matches = "1.4.0"
schnorrkel = { version = "0.9.1", default-features = false }
rand_core = "0.5.1" # should match schnorrkel
env_logger = "0.8.4"
log = "0.4.13"
