[package]
name = "zaxis-availability-recovery"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
lru = "0.6.1"
rand = "0.8.3"
thiserror = "1.0.21"
tracing = "0.1.26"

zaxis-erasure-coding = { path = "../../../erasure-coding" }
zaxis-primitives = { path = "../../../primitives" }
zaxis-node-primitives = { path = "../../primitives" }
zaxis-subsystem = { package = "zaxis-node-subsystem", path = "../../subsystem" }
zaxis-node-subsystem-util = { path = "../../subsystem-util" }
zaxis-node-network-protocol = { path = "../../network/protocol" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.8.4"
futures-timer = "3.0.2"
log = "0.4.11"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }

zaxis-subsystem-testhelpers = { package = "zaxis-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
