[package]
name = "zaxis-availability-bitfield-distribution"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
tracing = "0.1.26"
zaxis-primitives = { path = "../../../primitives" }
zaxis-subsystem = { package = "zaxis-node-subsystem", path = "../../subsystem" }
zaxis-node-subsystem-util = { path = "../../subsystem-util" }
zaxis-node-network-protocol = { path = "../../network/protocol" }

[dev-dependencies]
zaxis-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
maplit = "1.0.2"
log = "0.4.13"
env_logger = "0.8.4"
assert_matches = "1.4.0"
