[package]
name = "zaxis-network-bridge"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.15"
tracing = "0.1.26"
zaxis-primitives = { path = "../../../primitives" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
zaxis-subsystem = { package = "zaxis-node-subsystem", path = "../../subsystem" }
zaxis-overseer = { path = "../../overseer" }
zaxis-node-network-protocol = { path = "../protocol" }
zaxis-node-subsystem-util = { path = "../../subsystem-util"}
strum = "0.20.0"
parking_lot = "0.11.1"

[dev-dependencies]
assert_matches = "1.4.0"
zaxis-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures-timer = "3"
