[package]
name = "zaxis-collator-protocol"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
always-assert = "0.1.2"
futures = "0.3.15"
futures-timer = "3"
thiserror = "1.0.23"
tracing = "0.1.26"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }

zaxis-primitives = { path = "../../../primitives" }
zaxis-node-network-protocol = { path = "../../network/protocol" }
zaxis-node-primitives = { path = "../../primitives" }
zaxis-node-subsystem-util = { path = "../../subsystem-util" }
zaxis-subsystem = { package = "zaxis-node-subsystem", path = "../../subsystem" }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.8.4"
assert_matches = "1.4.0"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["std"] }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }

zaxis-subsystem-testhelpers = { package = "zaxis-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
